replace to getLast and getFirst